# beam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  conversations.json
.github/workflows/: ci.yml  release.yml
crates/beam-cli/: Cargo.toml
crates/beam-cli/src/: main.rs
crates/beam-core/: Cargo.toml
crates/beam-core/data/: wordlist_256.txt
crates/beam-core/examples/: benchmark_network.rs
crates/beam-core/src/: chunking.rs  direct_quic.rs  error.rs  folder_snapshot.rs  lib.rs  local_transfer.rs  manifest.rs  pairing.rs  paths.rs  relay_default.rs  retry.rs  session_crypto.rs  session_file.rs
crates/beam-core/tests/: direct_quic_one_file.rs  encrypted_session_transfer.rs  folder_snapshot_transfer.rs  local_one_file.rs  pairing_invite_codes.rs  pause_resume_one_file.rs  relay_fallback_one_file.rs  split_network_transfer.rs
crates/beam-relay/: Cargo.toml
crates/beam-relay/src/: lib.rs  main.rs
crates/beam-relay/tests/: http_rendezvous.rs
docs/: protocol-v0.md
