[package]
name = "beam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Beam terminal client."
default-run = "beam"

[[bin]]
name = "beam"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
beam-core = { path = "../beam-core" }
clap = { version = "4.5.61", features = ["derive"] }
