[package]
name = "beam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Beam terminal client."
default-run = "beam"

[[bin]]
name = "beam"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
beam-core = { path = "../beam-core" }
clap = { version = "4.5.61", features = ["derive"] }
clap_complete = "4.5.67"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
