[package]
name = "beam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Beam core: manifests, fixed-size chunking, local plaintext transfer, and shared transfer logic."

[lints]
workspace = true

[dependencies]
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
rand = "0.9.4"
sha2 = "0.10.9"
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.27.0"
