[package]
name = "beam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Beam core: manifests, fixed-size chunking, local plaintext transfer, and shared transfer logic."

[lints]
workspace = true

[dependencies]
base64 = "0.22"
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
quinn = "0.11.9"
rand = "0.9.4"
rcgen = "0.14.7"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10.9"
spake2 = "0.4"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }
ureq = "3.2.1"
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.27.0"
